# python-project-50

./: Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff.py  file_parser.py  parser.py
gendiff/scripts/: gendiff.py
scripts/: gendiff.py
tests/: test_flat.py  test_flat_json.py  test_flat_yaml.py
